{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 183,
  "lineage": "f9cf9e79-24b4-8214-e93b-78003bf2db0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:599569978473:instance/i-0745be174aa324419",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0745be174aa324419",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Amazon Linux2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b6a416d545e8c626",
            "private_dns": "ip-172-31-25-244.ec2.internal",
            "private_ip": "172.31.25.244",
            "public_dns": "ec2-54-91-181-158.compute-1.amazonaws.com",
            "public_ip": "54.91.181.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09f6d0f87a1a0222a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Testing TerrafomNew"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d8671c95",
            "tags": {
              "Name": "Testing TerrafomNew"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-011d46512105b2de4"
            ]
          },
          "depends_on": [
            "aws_security_group.terra-vm-SG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:internet-gateway/igw-06ecfa31c0fe5b297",
            "id": "igw-06ecfa31c0fe5b297",
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFmain"
            },
            "vpc_id": "vpc-03263bf7fb97e8c52"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TFPrivateRTB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0903eee7ecb114558",
            "owner_id": "599569978473",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ecfa31c0fe5b297",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFPrivateRTB"
            },
            "vpc_id": "vpc-03263bf7fb97e8c52"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TFPublicRTB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0768e4aa5d15f9b10",
            "owner_id": "599569978473",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ecfa31c0fe5b297",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFPublicRTB"
            },
            "vpc_id": "vpc-03263bf7fb97e8c52"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d28ec1eb2f03ba6a",
            "route_table_id": "rtb-0768e4aa5d15f9b10",
            "subnet_id": "subnet-0b0a853dde214dcdf"
          },
          "depends_on": [
            "aws_route_table.TFPublicRTB",
            "aws_subnet.TFPublic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae5a5f18952cf0ec",
            "route_table_id": "rtb-0903eee7ecb114558",
            "subnet_id": "subnet-00c30fe6aec278a37"
          },
          "depends_on": [
            "aws_route_table.TFPrivateRTB",
            "aws_subnet.TFPrivate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra-vm-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:security-group/sg-011d46512105b2de4",
            "description": "Testing TerrafomNew inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011d46512105b2de4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Testing TerrafomNew",
            "name_prefix": "",
            "owner_id": "599569978473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-vm-SG",
              "description": "terra-vm-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-5c488c21"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFPrivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:subnet/subnet-00c30fe6aec278a37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-00c30fe6aec278a37",
            "map_public_ip_on_launch": false,
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFPrivate"
            },
            "vpc_id": "vpc-03263bf7fb97e8c52"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFPublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:subnet/subnet-0b0a853dde214dcdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-0b0a853dde214dcdf",
            "map_public_ip_on_launch": false,
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFPublic"
            },
            "vpc_id": "vpc-03263bf7fb97e8c52"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TFmain",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:vpc/vpc-03263bf7fb97e8c52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0ddbe0e43bec4ae9e",
            "default_route_table_id": "rtb-08144a0c1ebf2866a",
            "default_security_group_id": "sg-0f0e533eba2ceab76",
            "dhcp_options_id": "dopt-3093f24a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03263bf7fb97e8c52",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08144a0c1ebf2866a",
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFmain"
            }
          }
        }
      ]
    }
  ]
}